<resources>
    <string name="app_name">BookGamma</string>
    <string name="action_settings">设置</string>
    <string name="action_addbook">添加书籍</string>
    <string name="action_update">检查更新</string>
    <string name="action_reading">阅读提醒</string>
    <string name="update_checking">正在检查更新...</string>
    <string name="update_already_updated">恭喜！无需更新～</string>
    <string name="update_dialog_title">发现新版本</string>
    <string name="update_dialog_message">前往下载？</string>
    <string name="update_error">检查更新时发生错误</string>
    <string name="action_comment">读书笔记</string>
    <string name="tx_bookname">书名</string>
    <string name="tx_pages">总页数</string>
    <string name="tx_images">图片</string>
    <string name="btn_save">保存</string>
    <string name="btn_choose_pic">选择图片</string>
    <string name="title_choose_pic">选择图片</string>
    <string name="tx_finish_time">完成日期</string>
    <string name="btn_select_time">完成日期</string>
    <string name="tip_no_book_name">没有填写书名</string>
    <string name="tip_no_book_pages">没有填写总页数</string>
    <string name="tip_no_book_image">没有选择图片</string>
    <string name="tip_err_finish_time">完成日期早于今天</string>
    <string name="tip_add_book_succeed">添加书籍成功</string>
    <string name="tip_add_book_fail">添加书籍失败</string>
    <string name="tip_err_create_folder">在SD卡创建文件夹失败</string>
    <string name="action_scan">扫描书籍条码</string>
    <string name="tip_top">将书籍条码置于取景框内</string>
    <string name="tip_bottom">请避免逆光和阴影</string>
    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="cancel">取消</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <string name="button_later">以后再说</string>
    <string name="msg_loading">正在加载数据…</string>
    <string name="msg_no_book">很抱歉，没有这本书的资料</string>
    <string name="msg_internet_error">网络连接出错</string>
    <string name="title_activity_book_list">BookListActivity</string>
    <string name="label_add_book">添加书籍</string>
    <string name="label_scanner">扫一扫</string>
    <string name="label_book_list">书籍列表</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="msg_no_comment">还没有读书笔记，快去添加一条吧~</string>
    <string name="tip_err_comment">获取读书笔记失败</string>
    <string name="btn_finish">完成</string>
    <string name="tip_del_book_succeed">删除书籍成功</string>
    <string name="tip_del_book_failed">删除书籍失败</string>
    <string name="tip_del_remind_succeed">删除提醒成功</string>
    <string name="tip_del_remind_failed">删除提醒失败</string>
    <string name="tip_add_comment_succeed">添加笔记成功</string>
    <string name="tip_add_comment_fail">添加笔记失败</string>
    <string name="tip_upd_comment_succeed">修改笔记成功</string>
    <string name="tip_upd_comment_fail">修改笔记失败</string>
    <string name="tip_del_comment_succeed">删除笔记成功</string>
    <string name="tip_del_comment_fail">删除笔记失败</string>
    <string name="add_comment">添加一条笔记</string>
    <string name="add_remind">添加提醒</string>
    <string name="upd_comment">修改笔记</string>
    <string name="tx_username">用户名</string>
    <string name="tx_password">密码</string>
    <string name="tx_password_a">密码确认</string>
    <string name="btn_login">登 录</string>
    <string name="btn_register">注 册</string>
    <string name="action_logout">注销</string>
    <string name="action_login">登录</string>
    <string name="tip_login_succeed">登录成功</string>
    <string name="tip_logout_succeed">注销成功</string>
    <string name="book_comment">读书笔记</string>
    <string name="book_comment_created_at">创建于</string>
    <string name="book_comment_created_by">by</string>
    <string name="book_comment_author_default">一个爱读书的人</string>
    <string name="txt_delete">删除</string>
    <string name="book_comment_del_confirm">"确认删除这条读书笔记？"</string>
    <string name="created_at">创建于</string>
    <string name="completed_at">预定完成日期</string>
    <string name="txt_share">分享</string>
    <string name="action_account">账户</string>
    <string name="txt_sync">同步</string>
</resources>
