<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.edu.xjtu.se.bookgamma.MainActivity">
    <item
        android:id="@+id/action_addbook"
        android:orderInCategory="101"
        android:title="@string/action_addbook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_comment"
        android:orderInCategory="101"
        android:title="@string/action_comment"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reading"
        android:orderInCategory="101"
        android:title="@string/action_reading"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/action_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="102"
        android:title="@string/action_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="103"
        android:title="@string/action_login"
        app:showAsAction="never" />
</menu>
