<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.edu.xjtu.se.bookgamma.AddBookActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar.Default"
            app:navigationIcon="@mipmap/ic_back" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Style.Margin.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/et_bookname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tx_bookname"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Style.Margin.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tx_pages"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_finish_time"
        style="@style/Style.Margin.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_finish_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btn_select_time"
            android:clickable="true"
            android:focusable="false"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/iv_bookimage"
        android:layout_width="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/choose" />

    <Button
        android:id="@+id/btn_addbook"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_save"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
</LinearLayout>
